<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@drawable/round_text"
    android:paddingBottom="20dp">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:id="@+id/btn_close"/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/factory_operator"
            android:gravity="center"
            android:textColor="@color/green"
            android:fontFamily="@font/lunasima_bold"
            android:textStyle="bold"
            android:textSize= "22sp"
            />
        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/operator_name"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/green"
            android:background="@drawable/round_text"
            android:fontFamily="@font/lunasima_regular"
            android:textStyle="bold"
            android:textSize= "16sp"
            />
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/email"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/green"
            android:background="@drawable/round_text"
            android:fontFamily="@font/lunasima_regular"
            android:textStyle="bold"
            android:textSize= "16sp"
            />
        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/phone"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/green"
            android:background="@drawable/round_text"
            android:fontFamily="@font/lunasima_regular"
            android:textStyle="bold"
            android:textSize= "16sp"
            />
        <TextView
            android:id="@+id/txtFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/factory_name"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/green"
            android:background="@drawable/round_text"
            android:fontFamily="@font/lunasima_regular"
            android:textStyle="bold"
            android:textSize= "16sp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>
