<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/back_img"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgLogo"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lunasima_bold"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:text="@string/reset"
            android:textSize="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lunasima_bold"
            android:layout_marginHorizontal="20dp"
            android:text="@string/pass1"
            android:textStyle="bold"
            android:textSize="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lunasima_regular"
            android:text="@string/received_email"
            android:textStyle="bold"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="left"
            android:textColor="@color/dark_gray"
            android:textSize="14dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:transitionName="username_tran"
            app:startIconDrawable="@drawable/letter"
            android:hint="@string/reset_code"
            android:layout_gravity="center"
            app:counterMaxLength="15">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/round_text"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/pass"
            android:textColor="@color/dark_gray"
            app:startIconDrawable="@drawable/lock"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/confirm_pass"
            android:textColor="@color/dark_gray"
            app:startIconDrawable="@drawable/lock"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/submit"
            android:fontFamily="@font/lunasima_bold"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:background="@drawable/round_button" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>