<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingsActivity">
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/back_img" />
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgLogo"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lunasima_bold"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings"
            android:textSize="35dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/english"
            android:fontFamily="@font/lunasima_bold"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingVertical="20dp"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:background="@drawable/round_button" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnArabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/arabic"
            android:fontFamily="@font/lunasima_bold"
            android:textStyle="bold"
            android:paddingVertical="20dp"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:background="@drawable/round_button_gray" />
    </LinearLayout>
</RelativeLayout>