<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/curved_back"
    android:layout_marginVertical="10dp"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/oswald_bold"
        android:textColor="@color/green"
        android:gravity="center"
        android:text="Factory Name" />
    <TextView
        android:id="@+id/txtIndustry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lunasima_regular"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="Industry Type" />
    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:padding="7dp"
        android:background="@drawable/round_text"
        android:fontFamily="@font/lunasima_regular"
        android:textColor="@color/black"
        android:layout_gravity="right"
        android:text="City" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/update"
            android:id="@+id/imgUpdate"/>
        <TextView
            android:id="@+id/txtUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:textColor="@color/dark_gray"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/lunasima_bold"
            android:text="@string/update" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/add"
            android:layout_marginLeft="10dp"
            android:id="@+id/imgAdd"/>
        <TextView
            android:id="@+id/txtAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:textColor="@color/dark_gray"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/lunasima_bold"
            android:text="@string/add_operator" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/delete"
            android:layout_marginLeft="10dp"
            android:id="@+id/imgDelete"/>
        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:textColor="@color/dark_gray"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/lunasima_bold"
            android:text="@string/delete" />
    </LinearLayout>



</LinearLayout>